--- a/IntugineHiringTask/src/app/header/header.component.html
+++ b/IntugineHiringTask/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-light bg-light sticky-top" >
   <a class="navbar-brand" href="#">
       <span style="font-family: 'Luckiest Guy', cursive; font-size: 30px;">Intugine</span>&nbsp;&nbsp;
       <span style="font-family:'ZCOOL QingKe HuangYou', cursive; font-size: 20px;" >Front-End Hiring Task</span>
