--- a/IntugineHiringTask/src/app/dashboard/dashboard.component.html
+++ b/IntugineHiringTask/src/app/dashboard/dashboard.component.html
@@ -1,20 +1,35 @@
-<div class="container"><br>
-  <div class="row">
+<div class="container">
+  <div class="row position-fixed" style="margin-left:11px;">
+    <div class="bg-warning badge badge-info" *ngIf="!_Loaded">Loading.... Please Wait!</div>
+  </div>
+  <div class="row" style="margin-top: 12px;">
     <div class="col-10">
-      <div style="border:8px solid rgba(180, 172, 172, 0.651); border-radius: 5px; position: fixed; width: 70%; height:80%;">
+      <div style="margin-top: 20px; border:8px solid rgba(180, 172, 172, 0.651); border-radius: 5px; position: fixed; width: 70%; height:80%;">
         <agm-map [zoom]="zoom" [latitude]="lat" [longitude]="lng">
-          <agm-marker *ngFor="let val of mapPointer"  [latitude]="val.lat" [longitude]="val.lng"></agm-marker>
+          <div *ngIf="getSelectedDeviceDetailsLength()==0">
+            <agm-marker *ngFor="let val of mapPointer" [latitude]="val.lat" [longitude]="val.lng" ></agm-marker>
+          </div>
+            <div *ngIf="getSelectedDeviceDetailsLength()>0">
+              <div *ngFor="let val of arrOfKeys">
+                <div *ngFor="let valu of selectedDeviceDetails[val]">
+                    <agm-marker *ngIf="valu.index==1"  [latitude]="valu.lat" [longitude]="valu.lng" [iconUrl]="iconArrow"></agm-marker>
+                    <agm-marker *ngIf="valu.static && valu.index>1"  [latitude]="valu.lat" [longitude]="valu.lng" [iconUrl]="iconStatic"></agm-marker>
+                    <agm-marker *ngIf="!valu.static && valu.index>1"  [latitude]="valu.lat" [longitude]="valu.lng" [iconUrl]="icon"></agm-marker>
+                </div>                  
+              </div>
+            </div>
         </agm-map>
       </div>
     </div>
-    <div class="col-2" *ngIf="devices" >
+    <div class="col-2" *ngIf="devices">
       <div class="alert alert-info" *ngFor="let val of devices">
-      <span>
-        {{val.device}}
-      </span> 
-      <span>
-        <input (change)="checkBoxChange($event)" type="checkbox" [name]="val.device" [id]="val.device" style="cursor: pointer; float:right; height:25px; width:25px;">
-      </span> 
+        <span style="font-family:'ZCOOL QingKe HuangYou', cursive;">
+          {{val.device}}
+        </span>
+        <span>
+          <input (change)="checkBoxChange($event)" type="checkbox" [name]="val.device" [id]="val.device"
+            style="cursor: pointer; float:right; height:25px; width:25px;">
+        </span>
       </div>
     </div>
   </div>
